comic detail fixed except for issue, price, grade

--- a/templates/comic-detail.html
+++ b/templates/comic-detail.html
@@ -203,7 +203,7 @@
                 <input type="number" 
                 id="price" 
                 name="price"
-                value="{{ comic.assessed_value}}"
+                value="{{ comic.assessed_value }}"
                 class="form-control" 
                 autocomplete="off"
                 style="
@@ -510,13 +510,13 @@
             
                     <!-- Message input -->
                     <div class="form-outline mb-4">
-                        <textarea
-                        class="form-control"
+                        <input
+                        class="form-control wtfnotes"
                         id="notes"
                         name="notes"
                         value="{{ comic.notes }}"
                         rows="4"
-                        ></textarea>
+                        ></input>
                         <label
                         class="form-label"
                         for="notes"
