--- a/templates/edit-comic.html
+++ b/templates/edit-comic.html
@@ -384,7 +384,7 @@
                         style="margin-left: 0px"
                         >Additional information</label >
                         
-                        {{ form.notes(class_="wtfforms") }}
+                        {{ form.notes(class_="wtfforms wtfnotes") }}
                         {% for error in form.notes.errors %} 
                             <br>
                             <small class="form-text text-danger">
