--- a/static/css/comicswap.css
+++ b/static/css/comicswap.css
@@ -201,4 +201,10 @@ h3 {
 .wtfforms {
   background-color: black;
   color:white;
+  width: 100%;
 }
+
+/* .wtfnotes {
+  height: 150px;
+  text-align: top;
+} */
