--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -15,7 +15,188 @@
 
 {% block content %}
 
-<h1>THANKS FOR JOINING OUR MAILING LIST!</h1>
+<h1>Join Our Community for:</h1>
+
+
+<section>
+
+    <div class="col-6">
+        <div class="card ">   
+            <div class="card-body">
+                <ul>
+                    <li ><strong>First look at newly available books</strong></li>
+                    <li ><strong>Buy, sell and trade safely</strong></li>
+                    <li ><strong>Enjoy our blog</strong></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+  </section>
+
+
+
+
+<div class="col-md-6 mb-4 mt-4">
+    <form>
+      <!-- 2 column grid layout with text inputs for the first and last names -->
+      <div class="row mb-4">
+        <div class="col">
+          <div class="form-outline">
+            <input
+              type="text"
+              id="username"
+              name="username"
+              class="form-control"
+              autocomplete="off"
+              />
+            <label
+              class="form-label"
+              for="username"
+              style="margin-left: 0px"
+              >Username</label
+            >
+            <div class="form-notch">
+              <div
+                class="form-notch-leading"
+                style="width: 9px"
+              ></div>
+              <div
+                class="form-notch-middle"
+                style="width: 68.8px"
+              ></div>
+              <div class="form-notch-trailing"></div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Email input -->
+      <div class="form-outline mb-4">
+        <input
+          type="email"
+          id="form3Example3"
+          class="form-control"
+          autocomplete="off"
+        />
+        <label
+          class="form-label"
+          for="form3Example3"
+          style="margin-left: 0px"
+          >Email address</label
+        >
+        <div class="form-notch">
+          <div class="form-notch-leading" style="width: 9px"></div>
+          <div
+            class="form-notch-middle"
+            style="width: 88.8px"
+          ></div>
+          <div class="form-notch-trailing"></div>
+        </div>
+      </div>
+
+      <!-- Password input -->
+      <div class="form-outline mb-4">
+        <input
+          type="password"
+          id="password"
+          name="password"
+          class="form-control"
+          autocomplete="off"
+        />
+        <label
+          class="form-label"
+          for="password"
+          style="margin-left: 0px"
+          >Password</label
+        >
+        <div class="form-notch">
+          <div class="form-notch-leading" style="width: 9px"></div>
+          <div class="form-notch-middle" style="width: 64px"></div>
+          <div class="form-notch-trailing"></div>
+        </div>
+      </div>
+
+      <div class="form-outline mb-4">
+        <input
+          type="password"
+          id="password2"
+          name="password2"
+          class="form-control"
+          autocomplete="off"
+        />
+        <label
+          class="form-label"
+          for="password2"
+          style="margin-left: 0px"
+          >Repeat Password</label
+        >
+        <div class="form-notch">
+          <div class="form-notch-leading" style="width: 9px"></div>
+          <div class="form-notch-middle" style="width: 64px"></div>
+          <div class="form-notch-trailing"></div>
+        </div>
+      </div>
+
+      <!-- Checkbox -->
+      <div class="form-check d-flex justify-content-center mb-4">
+        <input
+          class="form-check-input me-2"
+          type="checkbox"
+          value=""
+          id="form2Example3"
+          checked=""
+        />
+        <label class="form-check-label" for="form2Example3">
+          Subscribe to our newsletter
+        </label>
+      </div>
+
+      <!-- Submit button -->
+      <button type="submit" class="btn btn-primary btn-block mb-4">
+        Sign up
+      </button>
+
+
+
+      <!-- Register buttons -->
+      <!-- <div class="text-center">
+        <p>or sign up with:</p> -->
+        <!-- <button
+          type="button"
+          class="btn btn-primary btn-floating mx-1"
+        >
+          <i class="fab fa-facebook-f"></i>
+        </button> -->
+<!-- 
+        <button
+          type="button"
+          class="btn btn-primary btn-floating mx-1"
+        >
+          <i class="fab fa-google"></i>
+        </button> -->
+
+        <!-- <button
+          type="button"
+          class="btn btn-primary btn-floating mx-1"
+        >
+          <i class="fab fa-twitter"></i>
+        </button> -->
+
+        <!-- <button
+          type="button"
+          class="btn btn-primary btn-floating mx-1"
+        >
+          <i class="fab fa-github"></i>
+        </button> -->
+      </div>
+    </form>
+  </div>
+
+
+
+<br><br><br>
 <a href="/">BACK TO HOME PAGE</a>
 
 {% endblock %}
